--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "ko",
-  "version": "0.1.0",
+  "version": "1.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.24.0",
+    "ipdata": "^2.2.0",
+    "public-ip": "^4.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "sass": "^1.43.5",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
